fixed data directory path

--- a/demo/demo.config
+++ b/demo/demo.config
@@ -29,12 +29,12 @@ bedext	bed
 # i.e. you do not need to change them for different RNA-Seq datasets 
 # (provided they are for the same organism, e.g. hg19 here)
 # gene annotation merging ensembl Refseq, UCSC knowngene, Gencode gene, and Vegagene
-xiaofile	../data/hg19.merged.to.ensg.all.tx.03.18.2011.txt
+xiaofile	data/hg19.merged.to.ensg.all.tx.03.18.2011.txt
 # annotation splicing events as annotated in the above file
 # (xiaofname).  The format is the same as that for rnaseq_event.
-splicingfile	../data/annotation.event
+splicingfile	data/annotation.event
 # [optional] est annotation
-estfile	../data/est.event
+estfile	data/est.event
 # [optional] strand-specific flag: 
 # set: 1 (pair-1 sense) or 2 (pair-2 sense)
 # unset: 0 or not input (default)
